--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,24 @@
+certifi==2018.4.16
+chardet==3.0.4
 click==6.7
 Flask==1.0.2
 Flask-SocketIO==2.9.6
 gunicorn==19.8.1
+idna==2.7
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 numpy==1.14.0
+okta==0.0.4
+PyJWT==1.6.4
+PySocks==1.6.8
+python-dateutil==2.7.3
 python-engineio==2.1.0
 python-socketio==1.9.0
+pytz==2018.5
+requests==2.19.1
 six==1.11.0
+twilio==6.15.1
+urllib3==1.23
 Werkzeug==0.14.1
 yapf==0.22.0
-requests==2.19.1
-okta==0.0.4
