--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,34 @@
+attrdict==2.0.0
 boxsdk==1.5.5
 certifi==2018.4.16
 chardet==3.0.4
 click==6.7
+cloudinary==1.12.0
+cytoolz==0.9.0.1
+enum34==1.1.6
+eth-abi==1.1.1
+eth-account==0.2.3
+eth-hash==0.1.4
+eth-keyfile==0.5.1
+eth-keys==0.2.0b3
+eth-rlp==0.1.2
+eth-utils==1.0.3
 Flask==1.0.2
 Flask-SocketIO==2.9.6
 gunicorn==19.8.1
+hexbytes==0.1.0
 idna==2.7
 itsdangerous==0.24
 Jinja2==2.10
+lru-dict==1.1.6
 MarkupSafe==1.0
+mock==2.0.0
+nexosisapi==3.0.1
 numpy==1.14.0
 okta==0.0.4
+parsimonious==0.8.0
+pbr==4.1.1
+pycryptodome==3.6.4
 PyJWT==1.6.4
 PySocks==1.6.8
 python-dateutil==2.7.3
@@ -18,10 +36,13 @@ python-engineio==2.1.0
 python-socketio==1.9.0
 pytz==2018.5
 requests==2.19.1
+requests-toolbelt==0.8.0
+rlp==1.0.1
 six==1.11.0
+toolz==0.9.0
 twilio==6.15.1
 urllib3==1.23
+web3==4.4.1
+websockets==5.0.1
 Werkzeug==0.14.1
 yapf==0.22.0
-web3==4.4.1
-nexosisapi==3.0.1
